--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "react-youtube",
+  "name": "react-tube",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -14,8 +14,10 @@
     "normalize.css": "^8.0.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-linkify": "^1.0.0-alpha",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
+    "react-youtube": "^7.13.0",
     "undefined": "^0.1.0",
     "web-vitals": "^0.2.4"
   },
@@ -48,5 +50,5 @@
   "devDependencies": {
     "gh-pages": "^3.1.0"
   },
-  "homepage": "https://notpop.github.io/react-tube/"
+  "homepage": "https://notpop.github.io/"
 }
